# horrorgame

./: .gitignore  CMakeLists.txt  README.md  code_review_report.docx
.github/workflows/: build.yml
assets/: jumpscare.mov  locations.txt  story.txt
assets/cutscene/: deathbymonster.mov
assets/dialogue/: monologues.txt
docs/: DESIGN.md
include/: animation.h  audio.h  camera.h  collision.h  dialogue.h  effects.h  enemy.h  flashlight.h  game.h  interactions.h  map.h  npc.h  player.h  render.h  savegame.h  story.h  tilemap.h  ui.h  utils.h  video.h  world.h
maps/: Archive room logic.csv  Archive room tiled.csv  archive_close.csv  archive_open.csv  hallway.csv  hibernation.csv  lab.csv  logic archive tutup_logic.csv  logic archive_logic.csv  logic kimia_logic.csv  power.csv  rooms.txt  security.csv
scripts/: dialogue.txt
src/: animation.c  audio.c  camera.c  collision.c  dialogue.c  effects.c  enemy.c  flashlight.c  game.c  game_render.c  interactions.c  main.c  map.c  monologue.c  npc.c  player.c  render.c  savegame.c  story.c  tilemap.c  ui.c  utils.c  video.c  world.c
